--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -116,6 +116,7 @@
                                             <h5 class="text-white op-7 mb-2">Добро пожаловать в панель управления сайтом</h5>
                                         </div>
                                         <div class="ml-md-auto py-2 py-md-0">
+                                            {% include 'cup/donate.twig' %}
                                             {#<a href="#" class="btn btn-white btn-border btn-round mr-2">Manage</a>
                                             <a href="#" class="btn btn-secondary btn-round">Add Customer</a>#}
                                         </div>
@@ -449,7 +450,7 @@
     <script src="/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
     <script src="/assets/js/plugin/datatables/datatables.min.js"></script>
     <script src="/assets/js/plugin/jquery.modal/jquery.modal.min.js"></script>
-    <script src="/assets/js/plugin/sweetalert/sweetalert.min.js"></script>
+    <script src="/assets/js/plugin/sweetalert/sweetalert2.all.min.js"></script>
     <script src="/assets/js/plugin/select2/select2.full.min.js"></script>
     <script src="/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
     <script src="/assets/js/plugin/codemirror/lib/codemirror.js"></script>
