--- a/src/Template/cup/donate.twig
+++ b/src/Template/cup/donate.twig
@@ -10,7 +10,7 @@
                 Swal.fire({
                     closeOnEsc: true,
                     closeOnClickOutside: true,
-                    title: 'Поддержите разработку WebSpace Engine!',
+                    title: 'Поддержите разработку WebSpace Engine',
                     html: `
                         <p class="text-justify">
                             WSE является программным продуктом с <b>открытым исходным кодом</b>, распространяемым по лицензии MIT
@@ -23,7 +23,7 @@
                             Мы принимаем пожертвования следующими способами:
                         </p>
                         <div id="donate" class="mt-2">
-                            <div class="d-flex justify-content-around">
+                            <div class="row">
                                 <div class="col-12 col-md-4">
                                     <a href="https://yoomoney.ru/to/410011144467012" target="_blank" class="btn btn-link">
                                         <img src="https://yoomoney.ru/i/shop/iomoney_logo_color_example.png" style="height: 30px;" alt="yoomoney">
