fix cup fields error highlight

--- a/src/Template/cup/form.twig
+++ b/src/Template/cup/form.twig
@@ -33,7 +33,7 @@
     {% set args = args|merge({'value': args.value|e}) %}
 
     {% set error = '' %}
-    {% if _error[name] is same as(false) or _error[name] is not empty %}
+    {% if name in _error|keys %}
         {% set error = 'has-error' %}
     {% endif %}
 
