--- a/src/Template/cup/catalog/order/form.twig
+++ b/src/Template/cup/catalog/order/form.twig
@@ -107,7 +107,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="card-title">Состав заказа</div>
 
-                                    <button type="button" data-btn-modal-products class="btn btn-outline-info btn-round ml-auto">
+                                    <button type="button" data-btn-order-modal-products class="btn btn-outline-secondary ml-auto">
                                         <i class="fa fa-plus"></i>
                                         Добавить товар
                                     </button>
@@ -116,32 +116,32 @@
 
                                 <table data-table="order" class="table table-striped table-hover" style="width: 100%;">
                                     <thead>
-                                    <tr>
-                                        <th class="no-sorting">Позиция</th>
-                                        <th width="15%" class="no-sorting">Цена</th>
-                                        <th width="15%" class="no-sorting">Количество</th>
-                                    </tr>
+                                        <tr>
+                                            <th class="no-sorting">Позиция</th>
+                                            <th width="15%" class="no-sorting">Цена</th>
+                                            <th width="15%" class="no-sorting">Количество</th>
+                                        </tr>
                                     </thead>
                                     <tbody>
-                                    {% for product in products %}
-                                        {% set count = order.list[product.uuid.toString()] %}
-                                        <tr>
-                                            <td>{{ product.title }}</td>
-                                            <td>{{ product.price|number_format(2, '.', ' ') }}</td>
-                                            <td>
-                                                {% include 'cup/form.twig' with {
-                                                    'type': 'number',
-                                                    'name': 'list['~ product.uuid ~']',
-                                                    'args': {
-                                                        'value': count,
-                                                        'placeholder': '1',
-                                                        'step': 'any',
-                                                        'min': '0',
-                                                    }
-                                                } %}
-                                            </td>
-                                        </tr>
-                                    {% endfor %}
+                                        {% for product in products %}
+                                            {% set count = order.list[product.uuid.toString()] %}
+                                            <tr>
+                                                <td>{{ product.title }}</td>
+                                                <td>{{ product.price|number_format(2, '.', ' ') }}</td>
+                                                <td>
+                                                    {% include 'cup/form.twig' with {
+                                                        'type': 'number',
+                                                        'name': 'list['~ product.uuid ~']',
+                                                        'args': {
+                                                            'value': count,
+                                                            'placeholder': '1',
+                                                            'step': 'any',
+                                                            'min': '0',
+                                                        }
+                                                    } %}
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
                                     </tbody>
                                 </table>
                             </div>
@@ -231,7 +231,7 @@
         </div>
     </form>
 
-    <div data-modal-products class="modal">
+    <div data-order-modal-products class="modal">
         <div class="row">
             <div class="col-12">
                 {% include 'cup/form.twig' with {
@@ -265,7 +265,7 @@
                     }
                 } %}
             </div>
-            <div class="col-6">
+            <div class="col-12">
                 <div class="text-right" style="margin-top: 37px;">
                     <button type="button" class="btn btn-outline-info">Добавить товар</button>
                 </div>
