--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -42,8 +42,6 @@
                         <div class="container-fluid">
                             {% if user %}
                                 <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
-                                    {% include 'cup/donate.twig' %}
-
                                     {% for plugin in plugins %}
                                         {% for param in plugin.getToolbarItem() %}
                                             {% if param.twig %}
@@ -134,6 +132,10 @@
                                             <div class="card-header">
                                                 <div class="d-flex align-items-center">
                                                     <h4 class="card-title">Быстрый переход</h4>
+
+                                                    <ul class="nav nav-pills nav-secondary nav-pills-no-bd ml-auto">
+                                                        {% include 'cup/donate.twig' %}
+                                                    </ul>
                                                 </div>
                                             </div>
                                             <div class="card-body">
